# comphys-2-project-2

./: README.md
code/cpp/: CMakeLists.txt  GDsampler.cpp  GDsampler.h  compile_project  coulomb_importance_sampling  coulomb_main  importance_sampling  metropolis_langevin.cpp  metropolis_langevin.h  particle.cpp  particle.h  sampler.cpp  sampler.h  system.cpp  system.h  test.txt  vmc
code/cpp/Hamiltonians/: HO_with_coulomb.cpp  HO_with_coulomb.h  ellipticoscillator.cpp  ellipticoscillator.h  hamiltonian.cpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h
code/cpp/InitialStates/: randomuniform.cpp  randomuniform2.cpp  randomuniform2.h
code/cpp/WaveFunctions/: complexfunction.cpp  complexfunction.h  gaussian_binary.cpp  gaussian_binary.h  numericgaussian.cpp  numericgaussian.h  rbm.cpp  rbm.h  simplegaussian.cpp  simplegaussian.h  wavefunction.cpp  wavefunction.h
code/cpp/main/: coulomb_importance_sampling.cpp  coulomb_main.cpp  gradientDescent.cpp  gradientDescent_parallel.cpp  importance_sampling.cpp  main.cpp  parallel.cpp  unit_testing.cpp  vmc.cpp
code/python/: analysis.py  blocking.py  calculate_energies_alpha_N.py  calculate_time_N.py  get_alphas.py  metvsimp.py  plot_alpha_harmonic.py  plot_convergence.py  plot_difficult_function.py  plot_energies_SP1D.py  plot_positiondistribution.py  plot_time_N.py  run_large_simulation_difficultfunction.py
drafts/: proof_gradients.tex
example_runs/: README.md  alphas.csv  energies_energiesparallelrun1.csv  energies_energiesparallelrun2.csv  energies_energiesparallelrun3.csv  energies_energyanddistribution.csv  positions_energyanddistribution.csv  sympleharmonic.csv
output/: README.md  convergence.txt  energies_SP1D_h=1  energies_SP1D_h=10  energies_SP1D_h=100  energies_SP1D_h=5  energies_SP1D_imp_h=1  energies_SP1D_imp_h=10  energies_SP1D_imp_h=100  numerical_time_simpleharmonic.csv  sympleharmonic.csv  vmc_time_simpleharmonic.csv
